--- a/index.html
+++ b/index.html
@@ -1,68 +1,211 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-    />
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
-      integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
-      crossorigin="anonymous"
-    />
-    <link
-      href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="style.css" />
-    <title>Work Day Scheduler</title>
-  </head>
+	<head>
+		<meta charset="utf-8">
+		<title> Weekly Planner </title>
 
-  <body>
-    <header class="jumbotron">
-      <h1 class="display-3">Work Day Scheduler</h1>
-      <p class="lead">A simple calendar app for scheduling your work day</p>
-      <p id="currentDay" class="lead"></p>
-    </header>
-    <div class="container">
-      <!-- Timeblocks go here -->
-      <table class="table table-dark">
-        <thead>
-          <tr>
-            <th scope="col">#</th>
-            <th scope="col">First</th>
-            <th scope="col">Last</th>
-            <th scope="col">Handle</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <th scope="row">1</th>
-            <td>Mark</td>
-            <td>Otto</td>
-            <td>@mdo</td>
-          </tr>
-          <tr>
-            <th scope="row">2</th>
-            <td>Jacob</td>
-            <td>Thornton</td>
-            <td>@fat</td>
-          </tr>
-          <tr>
-            <th scope="row">3</th>
-            <td>Larry</td>
-            <td>the Bird</td>
-            <td>@twitter</td>
-          </tr>
-        </tbody>
-      </table>
-    </div>
+		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+		<link href="https://fonts.googleapis.com/css?family=Comfortaa|Dancing+Script" rel="stylesheet">
+		<link href="assets/style.css" rel="stylesheet">
+	</head>
+	<body>
+		<div class="wrapper">
+			<a href="#info" class="info-btn modal-trigger"><span class="material-icons">info_outline</span></a>
+			<div class="logo">
+				<a href="#" class="brand-logo logo__text teal lighten-2" center">weekly planer</a>
+			</div>
 
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
-  </body>
+			<a href="#" class="nav-toggler button-collapse" data-activates="slide-out"><i class="nav-toggler__icon material-icons">menu</i></a>
+			<nav class="nav">
+				<ul class="days-nav tabs card" id="slide-out">
+					<li class="days-nav__item tab">
+						<a href="#monday" class="days-nav__link">Monday</a>
+					</li>
+					<li class="days-nav__item tab">
+						<a href="#tuesday" class="days-nav__link">Tuesday</a>
+					</li>
+					<li class="days-nav__item tab">
+						<a href="#wednesday" class="days-nav__link">Wednesday</a>
+					</li>
+					<li class="days-nav__item tab">
+						<a href="#thursday" class="days-nav__link">Thursday</a>
+					</li>
+					<li class="days-nav__item tab">
+						<a href="#friday" class="days-nav__link">Friday</a>
+					</li>
+					<li class="days-nav__item tab">
+						<a href="#saturday" class="days-nav__link">Saturday</a>
+					</li>
+					<li class="days-nav__item tab">
+						<a href="#sunday" class="days-nav__link">Sunday</a>
+					</li>
+				</ul>
+			</nav>
+
+			<main class="main-content">
+				<ul class="days">
+					<li class="day card" id="monday">
+						<h2 class="day__header"> Monday </h2>
+						<div class="day__content">
+							<form class="form">
+								<div class="input-field">
+							        <input class="day__new-task" id="monday__new-task" type="text" data-length="30" maxlength="30">
+							        <label for="monday__new-task">new task</label>
+							    </div>
+								<button type="submit" id="monday__add-btn" class="day__add-btn btn-floating waves-effect waves-light teal lighten-2"><i class="material-icons">add</i></button>
+							</form>
+							<ul class="todo-list">
+							</ul>
+						</div>
+					</li>
+
+					<li class="day card" id="tuesday">
+						<h2 class="day__header"> Tuesday </h2>
+						<div class="day__content">
+							<form class="form">
+								<div class="input-field">
+							        <input class="day__new-task" id="tuesday__new-task" type="text" data-length="30" maxlength="30">
+							        <label for="tuesday__new-task">new task</label>
+							   	</div>
+								<button type="submit" id="monday__add-btn" class="day__add-btn btn-floating waves-effect waves-light teal lighten-2"><i class="material-icons">add</i></button>
+							</form>
+							<ul class="todo-list">
+							</ul>
+						</div>
+					</li>
+
+					<li class="day card" id="wednesday">
+						<h2 class="day__header"> Wednesday </h2>
+						<div class="day__content">
+							<form class="form">
+								<div class="input-field">
+							    	<input class="day__new-task" id="wednesday__new-task" type="text" data-length="30" maxlength="30">
+							        <label for="wednesday__new-task">new task</label>
+							    </div>
+								<button type="submit" id="monday__add-btn" class="day__add-btn btn-floating waves-effect waves-light teal lighten-2"><i class="material-icons">add</i></button>
+							</form>
+							<ul class="todo-list">
+							</ul>
+						</div>
+					</li>
+
+					<li class="day card" id="thursday">
+						<h2 class="day__header"> Thursday </h2>
+						<div class="day__content">
+							<form class="form">
+								<div class="input-field">
+							    	<input class="day__new-task" id="thursday__new-task" type="text" data-length="30" maxlength="30">
+							    	<label for="thursday__new-task">new task</label>
+							    </div>
+								<button type="submit" id="monday__add-btn" class="day__add-btn btn-floating waves-effect waves-light teal lighten-2"><i class="material-icons">add</i></button>
+							</form>
+							<ul class="todo-list">
+							</ul>
+						</div>
+					</li>
+
+					<li class="day card" id="friday">
+						<h2 class="day__header"> Friday </h2>
+						<div class="day__content">
+							<form class="form">
+								<div class="input-field">
+							    	<input class="day__new-task" id="friday__new-task" type="text" data-length="30" maxlength="30">
+							        <label for="friday__new-task">new task</label>
+							    </div>
+								<button type="submit" id="monday__add-btn" class="day__add-btn btn-floating waves-effect waves-light teal lighten-2"><i class="material-icons">add</i></button>
+							</form>
+							<ul class="todo-list">
+							</ul>
+						</div>
+					</li>
+
+					<li class="day card" id="saturday">
+						<h2 class="day__header"> Saturday </h2>
+						<div class="day__content">
+							<form class="form">
+								<div class="input-field">
+							    	<input class="day__new-task" id="saturday__new-task" type="text" data-length="30" maxlength="30">
+							        <label for="saturday__new-task">new task</label>
+							    </div>
+								<button type="submit" id="monday__add-btn" class="day__add-btn btn-floating waves-effect waves-light teal lighten-2"><i class="material-icons">add</i></button>
+							</form>
+							<ul class="todo-list">
+							</ul>
+						</div>
+					</li>
+
+					<li class="day card" id="sunday">
+						<h2 class="day__header"> Sunday </h2>
+						<div class="day__content">
+							<form class="form">
+								<div class="input-field">
+							    	<input class="day__new-task" id="sunday__new-task" type="text" data-length="30" maxlength="30">
+							        <label for="sunday__new-task">new task</label>
+							    </div>
+								<button type="submit" id="monday__add-btn" class="day__add-btn btn-floating waves-effect waves-light teal lighten-2"><i class="material-icons">add</i></button>
+							</form>
+							<ul class="todo-list">
+							</ul>
+						</div>
+					</li>
+				</ul>
+			</main>
+
+		</div>
+
+		<div class="info-modal modal" id="info">
+			<div class="info-modal__content modal-content">
+				<h3 class="info-modal__header"> Tips for using App </h3>
+				<ul class="info-modal__tips">
+					<li> click on the empty square to mark the task as finished </li>
+					<li> click on the trash icon to delete your task </li>
+					<li> double click on your task gives you possibility to edit it </li>
+					<li> number of your tasks is limited to 10 elements </li>
+				</ul>
+				<p class="info-modal__goodbye"> Please Enjoy </p>
+			</div>
+			<div class="modal-footer">
+      			<a href="#" class="modal-action modal-close btn-flat">Ok</a>
+    		</div>
+		</div>
+
+		<div class="info-modal modal tasks-info" id="tasks-info">
+			<div class="info-modal__content modal-content">
+				<p> Tasks are limited to 10 per day. </p>
+				<p> If you need to add more please remove one</p>
+			</div>
+			<div class="modal-footer">
+      			<a href="#" class="modal-action modal-close btn-flat">Ok</a>
+    		</div>
+		</div>
+
+		<div class="loader-container">
+			<div class="preloader-wrapper big active">
+		   		<div class="spinner-layer spinner-red-only">
+		      		<div class="circle-clipper left">
+		        		<div class="circle"></div>
+		      		</div>
+					<div class="gap-patch">
+		        		<div class="circle"></div>
+		      		</div>
+					<div class="circle-clipper right">
+						<div class="circle"></div>
+						
+						<div class="container" id="footer-text">
+								<p class="text-muted">William Mao 2019 &reg; </p>
+							</div>
+						</footer>
+		      		</div>
+		    	</div>
+			</div>
+		</div>
+
+		<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.1/js/materialize.min.js"></script>
+		<script src="assets/main.js"></script>
+		<script src="http://localhost:35729/livereload.js"></script>
+
+	</body>
+	
 </html>
