--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 					<li> double click on your task gives you possibility to edit it </li>
 					<li> number of your tasks is limited to 10 elements </li>
 				</ul>
-				<p class="info-modal__goodbye"> Please Enjoy </p>
+				<p class="info-modal__goodbye"> William Mao 2019 &reg; </p>
 			</div>
 			<div class="modal-footer">
       			<a href="#" class="modal-action modal-close btn-flat">Ok</a>
